Overflow hidden to fix FF

--- a/src/components/PhoneNumberInput/style.css
+++ b/src/components/PhoneNumberInput/style.css
@@ -38,4 +38,5 @@
 .phoneNumberContainer input {
   width: 100%;
   border-bottom: none;
+  overflow: hidden;
 }
